samples/_failures_safe/1761712083_18201b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc3d331d.c: In function ‘main’:
./samples/SAFE/__tmp_fc3d331d.c:152:16: error: missing terminating " character
  152 |         printf("\nMatrix A *
      |                ^~~~~~~~~~~~~
./samples/SAFE/__tmp_fc3d331d.c:152:9: error: expected expression at end of input
  152 |         printf("\nMatrix A *
      |         ^~~~~~
./samples/SAFE/__tmp_fc3d331d.c:152:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fc3d331d.c:152:9: error: expected declaration or statement at end of input
